Implement request payment.

--- a/SiriExtension/Info.plist
+++ b/SiriExtension/Info.plist
@@ -32,6 +32,7 @@
 				<string>INSearchForMessagesIntent</string>
 				<string>INSetMessageAttributeIntent</string>
 				<string>INSendPaymentIntent</string>
+				<string>INRequestPaymentIntent</string>
 			</array>
 		</dict>
 		<key>NSExtensionPointIdentifier</key>
