Implement reading NFC tag to open grab.com

--- a/HorseRide/Info.plist
+++ b/HorseRide/Info.plist
@@ -24,9 +24,12 @@
 	<string>LaunchScreen</string>
 	<key>UIMainStoryboardFile</key>
 	<string>Main</string>
+	<key>NFCReaderUsageDescription</key>
+	<string>To Detect Tags</string>
 	<key>UIRequiredDeviceCapabilities</key>
 	<array>
 		<string>armv7</string>
+		<string>nfc</string>
 	</array>
 	<key>UISupportedInterfaceOrientations</key>
 	<array>
