--- a/HorseRide/Info.plist
+++ b/HorseRide/Info.plist
@@ -26,6 +26,17 @@
 	<string>Main</string>
 	<key>NFCReaderUsageDescription</key>
 	<string>To Detect Tags</string>
+	<key>CFBundleURLTypes</key>
+	<array>
+		<dict>
+			<key>CFBundleURLName</key>
+			<string>vinceyuan.HorseRide</string>
+			<key>CFBundleURLSchemes</key>
+			<array>
+				<string>horseride</string>
+			</array>
+		</dict>
+	</array>
 	<key>UIRequiredDeviceCapabilities</key>
 	<array>
 		<string>armv7</string>
