Show qr code in siri.

--- a/SiriExtension/Info.plist
+++ b/SiriExtension/Info.plist
@@ -35,6 +35,7 @@
 				<string>INRequestPaymentIntent</string>
 				<string>INRequestRideIntent</string>
 				<string>INGetRideStatusIntent</string>
+				<string>INGetVisualCodeIntent</string>
 			</array>
 		</dict>
 		<key>NSExtensionPointIdentifier</key>
